# nn

./: Cargo.toml  decode.py  fan.html  ma.html  stroke_data  vectors.txt  笔画分类.txt
dollar/: Cargo.toml  ndollar.js  original_stroke_data  pdollar.js  stroke_data  stroke_order_data  yq.txt
dollar/html/: font.html
dollar/html/split_gif/: Cargo.toml  image.data  points.data  stroke.data
dollar/html/split_gif/src/: fetch.rs  main.1.rs  main.rs  main_centers.rs  pdollarplus.rs  retina.rs
dollar/src/: dollar.rs  dollar_test.rs  fetch_stroke.rs  main.rs  ndollar.rs  pdollar.rs  pdollarplus.rs  text.rs
dollar/strokes/: 一.stroke  丁.stroke  七.stroke  万.stroke  丈.stroke  三.stroke  上.stroke  下.stroke  丌.stroke  不.stroke  与.stroke  丐.stroke  丑.stroke  专.stroke  且.stroke  丕.stroke  世.stroke  丘.stroke  丙.stroke  业.stroke  丛.stroke  东.stroke  丝.stroke  丞.stroke  丢.stroke  两.stroke  严.stroke  丧.stroke  个.stroke  丫.stroke  中.stroke  丰.stroke  串.stroke  临.stroke  丸.stroke  丹.stroke  为.stroke  主.stroke  丽.stroke  举.stroke  (+4912 more)
dollar/strokes_new/: 一.stroke  丁.stroke  丁.stroke_order  七.stroke  七.stroke_order  万.stroke  万.stroke_order  丈.stroke  三.stroke  三.stroke_order  上.stroke  上.stroke_order  下.stroke  下.stroke_order  丌.stroke  丌.stroke_order  不.stroke  不.stroke_order  与.stroke  与.stroke_order  (+13233 more)
src/: controller.rs  data.rs  gesture_config.rs  main - 副本.rs  main.rs  nn.rs  stroke_config.rs  trash.rs  vector_2d.rs
tess/: .project  build.gradle  if_focus_1055056.psd  if_magnifier_1216572.psd
tess/check_digest/: Cargo.toml
tess/check_digest/src/: lib.rs
vec_creater/: Cargo.toml
(+41 files in other folders)
