[package]
name = "planet"
version = "0.1.0"
authors = ["planet"]

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "*"
tiny_http = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.5", default-features = false }
android_logger = "0.5"
zip = { version = "0.4", features = ["deflate-zlib"], default-features = false }

[profile.release]
lto = true
#panic = 'abort'
