[package]
name = "split_gif"
version = "0.1.0"
authors = ["planet0104 <planet0104@gmail.com>"]

[dependencies]
md5 = "0.3.8"
reqwest = "0.8.8"
gif = "0.10.1"
gif-dispose = "2.1.1"
image = "0.19.0"
rand = "0.5.5"
bincode = "1.0.1"
imageproc = "0.15.0"
resize = "0.3.0"
polylabel = "*"
geo = "*"
bzip2 = "0.3.3"